<resources>
    <string name="app_name">MyShopList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item Details </string>
    <string name="item_name">Item name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_brand">Item Brand(if any)</string>
    <string name="item_color">Item Color(if any)</string>
    <string name="item_size">Item Size (if any)</string>
    <string name="item_type">Item Type(if any)</string>
    <string name="item_date_time">Date and Time</string>
    <string name="save_item">Save Item </string>
    <string name="delete_confirm">Are you sure you want to delete this Item ?</string>
    <string name="opt_ok">OK</string>
    <string name="opt_cancel">Cancel</string>
    <string name="edit_item_text">Edit Item Detail</string>
    <string name="update_btn_text">Update</string>
</resources>
