<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:paddingTop="4dp"
                android:text="@string/item_quantity"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_quantity"
                android:paddingTop="4dp"
                android:text="@string/item_brand"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_brand"
                android:paddingTop="4dp"
                android:text="@string/item_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_color"
                android:paddingTop="4dp"
                android:text="@string/item_size"
                android:textSize="18sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_size"
                android:paddingTop="4dp"
                android:text="@string/item_date_time"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TableRow
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/item_date">

                <Button
                android:id="@+id/editButton"
                android:layout_height="35dp"
                android:layout_width="35dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:drawable/ic_menu_edit"/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_height="35dp"
                    android:layout_width="35dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:drawable/ic_delete"/>
            </TableRow>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>