<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/del_conf_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="14sp"
                android:padding="6dp"
                android:text="@string/delete_confirm" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ok_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@+id/del_conf_popup"
                    android:layout_marginTop="5dp"
                    android:text="@string/opt_ok" />

                <Button
                    android:id="@+id/cancel_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@+id/del_conf_popup"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/opt_cancel" />

            </LinearLayout>



        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>